--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -106,6 +106,8 @@
 
 		.topLevel {
 			width: max-content;
+			margin-left: auto;
+			margin-right: auto;
 
 			.topLevelText {
 				display: none;
