--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -6,14 +6,12 @@
 	justify-content: space-between;
 	gap: 15px;
 	max-width: 500px;
-	min-width: 215px;
 	width: 100%;
 	height: calc(100vh - 2rem);
 	background: var(--color-background);
 	border: 2px solid var(--switch-border);
 	border-radius: 10px;
 	z-index: 1;
-	overflow: hidden;
 
 	.burgerBtn {
 		position: relative;
@@ -109,10 +107,43 @@
 		}
 	}
 
+	.foldButton {
+		position: absolute;
+		top: 80px;
+		right: -15px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 2px;
+		border-radius: 8px;
+		border: 2px solid var(--switch-border);
+		background: var(--color-background);
+		z-index: 10;
+
+		> svg {
+			width: 20px;
+			height: 20px;
+		}
+	}
+
+	&[aria-expanded='false'] {
+		max-width: 110px;
+		align-items: center;
+
+		footer {
+			flex-direction: column;
+			gap: 15px;
+		}
+
+		.foldButton {
+			transform: rotate(180deg);
+		}
+	}
+
 	&.sidebarMobile {
 		justify-content: flex-start;
 		max-width: 100%;
-		height: max-content;
+		height: 70px;
 		border: none;
 		display: none;
 
@@ -148,21 +179,7 @@
 	}
 }
 
-[aria-expanded='false'] {
-	.sidebar {
-		width: 110px;
-		max-width: 110px;
-		min-width: 110px;
-		align-items: center;
-
-		footer {
-			flex-direction: column;
-			gap: 15px;
-		}
-	}
-}
-
-@container sidebar (max-width: 270px) {
+@container sidebar (max-width: 274px) {
 	.sidebar {
 		footer {
 			flex-direction: column;
