re use mouse event to fix firefox drag issue

--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -35,6 +35,10 @@
 				cursor: pointer;
 				background: var(--switch-background);
 			}
+
+			&::-webkit-details-marker {
+				display: none;
+			}
 		}
 
 		&[open] {
