handled wrapper on the right

--- a/styles/app/components/sidebar/resizeWrapper.module.css
+++ b/styles/app/components/sidebar/resizeWrapper.module.css
@@ -13,8 +13,10 @@
 		cursor: col-resize;
 		transform-origin: center;
 		z-index: 2;
+	}
 
-		&.handleLeft {
+	&.positionRight {
+		> span {
 			right: auto;
 			left: -10px;
 		}
