--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -3,8 +3,33 @@
 	justify-content: space-between;
 	gap: 30px;
 
-	section {
+	> div {
 		width: 100%;
+	}
+
+	.mainContent {
+		display: flex;
+		justify-content: space-between;
+		gap: 30px;
+
+		.videoContainer {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 15px;
+			width: 100%;
+			height: max-content;
+
+			.video {
+				max-height: 70vh;
+			}
+
+			h2 {
+				font-size: 1.5rem;
+				font-weight: 700;
+				line-height: 2rem;
+			}
+		}
 	}
 
 	.navigationSidebar {
