--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -1,15 +1,71 @@
+@container sidebar (max-width: 274px) {
+	.sidebar {
+		footer {
+			flex-direction: column;
+			gap: 15px;
+		}
+	}
+}
+
 .sidebar {
+	container: sidebar / size;
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 15px;
-	max-width: 315px;
+	max-width: 500px;
 	width: 100%;
 	height: calc(100vh - 2rem);
 	background: var(--color-background);
 	border: 2px solid var(--switch-border);
 	border-radius: 10px;
+	z-index: 1;
+
+	.burgerBtn {
+		position: relative;
+		display: none;
+
+		> svg,
+		> svg path {
+			transition: transform 0.3s;
+		}
+
+		> svg {
+			width: 30px;
+			height: 30px;
+
+			path {
+				&:first-child {
+					transform-origin: 20% 10%;
+				}
+				&:nth-child(2) {
+					opacity: 1;
+					transition-property: opacity;
+				}
+				&:last-child {
+					transform-origin: 20% 90%;
+				}
+			}
+		}
+
+		&.openedBurger {
+			> svg {
+				transform: rotate(-180deg);
+				path {
+					&:first-child {
+						transform: rotate(45deg) scaleX(1.35);
+					}
+					&:nth-child(2) {
+						opacity: 0;
+					}
+					&:last-child {
+						transform: rotate(-45deg) scaleX(1.35);
+					}
+				}
+			}
+		}
+	}
 
 	header {
 		width: 100%;
@@ -79,16 +135,71 @@
 	}
 
 	&[aria-expanded='false'] {
+		max-width: 110px;
 		align-items: center;
-		width: 110px;
-
-		.foldButton {
-			transform: rotate(180deg);
-		}
 
 		footer {
 			flex-direction: column;
 			gap: 15px;
+		}
+
+		.foldButton {
+			transform: rotate(180deg);
+		}
+	}
+
+	&.sidebarMobile {
+		justify-content: flex-start;
+		max-width: 100%;
+		height: 70px;
+		border: none;
+		display: none;
+
+		header {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			z-index: 20;
+		}
+
+		.burgerContent {
+			position: absolute;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			width: 100%;
+			height: 100vh;
+			top: 0;
+			left: 0;
+			background: var(--color-background);
+			padding: 90px 0 10px 0;
+			gap: 10px;
+			z-index: 10;
+			transform: translateX(100%);
+			visibility: hidden;
+			transition: all 0.3s ease;
+
+			&.openedBurger {
+				visibility: visible;
+				transform: translateX(0);
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 570px) {
+	.sidebar {
+		&.sidebarDesktop,
+		.foldButton {
+			display: none;
+		}
+
+		&.sidebarMobile {
+			display: flex;
+		}
+
+		.burgerBtn {
+			display: block;
 		}
 	}
 }
