add responsive management to layout with right sidebar

--- a/styles/app/components/sidebar/resizeWrapper.module.css
+++ b/styles/app/components/sidebar/resizeWrapper.module.css
@@ -24,12 +24,14 @@
 		}
 	}
 
-	&.folded {
-		max-width: 110px;
-		min-width: 110px;
+	&[data-position='left'] {
+		&.folded {
+			max-width: 110px;
+			min-width: 110px;
 
-		> span {
-			display: none;
+			> span {
+				display: none;
+			}
 		}
 	}
 }
