add responsive management to layout with right sidebar

--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -190,6 +190,14 @@
 
 [data-position='right'] {
 	.sidebar {
+		&[aria-expanded='false'] {
+			max-width: 500px;
+		}
+
+		form {
+			width: 100%;
+		}
+
 		.foldButton {
 			display: none;
 		}
