--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -5,9 +5,8 @@
 	align-items: center;
 	text-align: center;
 	gap: 50px;
-	margin-top: 20px;
-	margin-bottom: 10px;
-	padding-top: 15px;
+	margin: 40px;
+	padding-top: 40px;
 	border-top: 1px solid transparent;
 	border-image: linear-gradient(
 			90deg,
