updated sticky target to not depend on the component but on the layout

--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -6,6 +6,12 @@
 	section {
 		width: 100%;
 	}
+
+	.navigationSidebar {
+		position: sticky;
+		top: 1rem;
+		height: max-content;
+	}
 }
 
 @media screen and (max-width: 570px) {
