--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@
 	--grey-100: #bab6be;
 	--grey-500: #565656;
 
+	--color-error: #d73453;
+	--color-success: #2f942f;
+	--color-success-drak: #5c9a5c;
+
 	--color-primary: var(--purple-200);
 	--color-link: var(--purple-100);
 	--color-background: var(--purple-900);
@@ -47,6 +51,10 @@
 }
 
 [data-theme='light'] {
+	--color-error: #df2147;
+	--color-success: #089408;
+	--color-success-drak: #067206;
+
 	--color-primary: var(--purple-300);
 	--color-link: var(--purple-300);
 	--color-background: white;
