--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -2,10 +2,15 @@
 	display: flex;
 	justify-content: space-between;
 	gap: 30px;
-	overflow-x: hidden;
 
 	section {
 		width: 100%;
+	}
+
+	.navigationSidebar {
+		position: sticky;
+		top: 1rem;
+		height: max-content;
 	}
 }
 
