--- a/styles/app/components/sidebar/resizeWrapper.module.css
+++ b/styles/app/components/sidebar/resizeWrapper.module.css
@@ -15,7 +15,7 @@
 		z-index: 2;
 	}
 
-	&[data-resizableSide='left'] {
+	&[data-resizableside='left'] {
 		> span {
 			right: auto;
 			left: -10px;
