feat(app): layout responsive with sidebar right (#442)

--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -24,6 +24,11 @@
 				max-height: 70vh;
 			}
 
+			.formMobile {
+				display: none;
+				width: 100%;
+			}
+
 			h2 {
 				font-size: 1.5rem;
 				font-weight: 700;
@@ -37,6 +42,22 @@
 		top: 1rem;
 		height: max-content;
 		width: max-content;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.sidebarLayout {
+		.mainContent {
+			.videoContainer {
+				.formMobile {
+					display: block;
+				}
+			}
+
+			> div:not(.videoContainer) {
+				display: none;
+			}
+		}
 	}
 }
 
