--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -3,14 +3,61 @@
 	justify-content: space-between;
 	gap: 30px;
 
-	section {
+	> div {
 		width: 100%;
+	}
+
+	.mainContent {
+		display: flex;
+		justify-content: space-between;
+		gap: 30px;
+
+		.videoContainer {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 15px;
+			width: 100%;
+			height: max-content;
+
+			.video {
+				max-height: 70vh;
+			}
+
+			.formMobile {
+				display: none;
+				width: 100%;
+			}
+
+			h2 {
+				font-size: 1.5rem;
+				font-weight: 700;
+				line-height: 2rem;
+			}
+		}
 	}
 
 	.navigationSidebar {
 		position: sticky;
 		top: 1rem;
 		height: max-content;
+		width: max-content;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.sidebarLayout {
+		.mainContent {
+			.videoContainer {
+				.formMobile {
+					display: block;
+				}
+			}
+
+			> div:not(.videoContainer) {
+				display: none;
+			}
+		}
 	}
 }
 
