--- a/styles/app/common/form.module.css
+++ b/styles/app/common/form.module.css
@@ -9,16 +9,104 @@
 	}
 
 	.generateBtnContainer {
-		margin: 15px 0;
+		position: sticky;
+		bottom: 0;
+		padding-top: 15px;
+		background: var(--color-background);
 
-		a {
+		.infosCard {
+			position: relative;
 			display: block;
+			width: 100%;
+			height: max-content;
+			overflow: hidden;
+			padding: 30px 20px;
+			border-radius: 5px;
+			background: var(--switch-background);
+			z-index: 0;
+			margin-bottom: 1rem;
+
+			.statusIcon {
+				position: absolute;
+				right: 10px;
+				top: 10px;
+				width: 20px;
+				height: 20px;
+			}
+
+			.download {
+				color: var(--color-success-text);
+				font-weight: bold;
+				display: flex;
+				align-items: center;
+				gap: 0.5rem;
+				width: max-content;
+				margin-top: 0.5rem;
+
+				> svg {
+					width: 20px;
+					height: 20px;
+				}
+			}
+
+			&.error {
+				font-size: 0.8rem;
+				background: var(--color-error);
+				color: var(--color-error-text);
+			}
+
+			&.success {
+				background: var(--color-success);
+				color: var(--color-success-text);
+			}
+
+			&.loading {
+				&::before {
+					content: '';
+					position: absolute;
+					z-index: -2;
+					left: -150%;
+					top: -150%;
+					width: 400%;
+					height: 400%;
+					background-color: var(--switch-background);
+					background-repeat: no-repeat;
+					background-size:
+						50% 50%,
+						50% 50%;
+					background-position:
+						0 0,
+						100% 0,
+						100% 100%,
+						0 100%;
+					background-image: linear-gradient(
+							var(--switch-background),
+							var(--switch-background)
+						),
+						linear-gradient(var(--color-primary), var(--color-primary)),
+						linear-gradient(var(--switch-background), var(--switch-background)),
+						linear-gradient(var(--color-primary), var(--color-primary));
+					animation: rotate 3s linear infinite;
+				}
+
+				&::after {
+					content: '';
+					position: absolute;
+					z-index: -1;
+					left: 3px;
+					top: 3px;
+					width: calc(100% - 6px);
+					height: calc(100% - 6px);
+					background: var(--switch-background);
+					border-radius: 5px;
+				}
+			}
 		}
 	}
+}
 
-	.error {
-		text-align: center;
-		font-size: 0.8rem;
-		color: var(--color-error);
+@keyframes rotate {
+	100% {
+		transform: rotate(1turn);
 	}
 }
