--- a/styles/app/layout/main.module.css
+++ b/styles/app/layout/main.module.css
@@ -27,6 +27,10 @@
 			.formMobile {
 				display: none;
 				width: 100%;
+
+				button[type='submit'] {
+					margin-bottom: 1rem;
+				}
 			}
 
 			h2 {
