--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,9 +21,10 @@
 	--grey-500: #565656;
 
 	--color-error: #d73453;
+	--color-error-text: white;
 	--color-success: #2f942f;
 	--color-success-text: white;
-	--color-success-btn-back: #d3e6d0;
+	--color-download-btn-background: #d3e6d0;
 
 	--color-primary: var(--purple-200);
 	--color-link: var(--purple-100);
@@ -36,7 +37,7 @@
 
 	--color-input-background: #eaeaea;
 
-	--switch-background: var(--purple-450);
+	--switch-background: var(--purple-500);
 	--switch-unselected: var(--grey-100);
 	--switch-border: var(--grey-100);
 
@@ -56,7 +57,7 @@
 	--color-error-text: #772119;
 	--color-success: #d3e6d0;
 	--color-success-text: #336b2e;
-	--color-success-btn-back: #438a3e;
+	--color-download-btn-background: #438a3e;
 
 	--color-primary: var(--purple-300);
 	--color-link: var(--purple-300);
@@ -89,4 +90,30 @@ body {
 
 a {
 	color: var(--color-link);
+}
+
+button {
+	position: relative;
+	display: block;
+	padding: 0.4rem 1.5rem;
+	border-radius: 0.5rem;
+	border: 3px solid transparent;
+	font-size: 1rem;
+	text-align: center;
+
+	&:hover {
+		cursor: pointer;
+	}
+
+	&[disabled] {
+		background: var(--grey-500);
+		color: var(--grey-100);
+
+		&:hover {
+			cursor: not-allowed;
+			background: var(--grey-500);
+			color: var(--grey-100);
+			border: 3px solid transparent;
+		}
+	}
 }
