--- a/styles/app/components/form/form.module.css
+++ b/styles/app/components/form/form.module.css
@@ -21,16 +21,18 @@
 	background: var(--color-background);
 
 	.download {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 0.5rem;
+		margin-top: 1rem;
+		padding: 0.4rem 1.5rem;
+		border-radius: 0.5rem;
 		background: var(--color-download-btn-background);
 		color: var(--color-btn-text);
 		font-weight: bold;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		gap: 0.5rem;
-		margin-top: 1rem;
-		padding: 0.5rem 1.5rem;
-		width: 100%;
+		transition: all 0.3s ease;
 
 		> svg {
 			width: 20px;
